--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <a
                 title="Refrigerator &amp; Washing machine service and repair in Trivandrum"
                 class="logo"
-                href="/index.html"
+                href="./index.html"
                 ><img
                   src="https://hridhukrishnaelectronics.in/assets/images/Washing_machine-repair_in_trivandrum.webp"
                   alt="Hridhukrishna Electronics"
@@ -94,7 +94,7 @@
                             padding-right: 0rem;
                             padding-left: 0rem !important;
                           "
-                          href="/index.html"
+                          href="./index.html"
                           >Home<span class="sr-only">(current)</span></a
                         >
                       </li>
@@ -105,7 +105,7 @@
                             padding-right: 0rem;
                             padding-left: 0rem !important;
                           "
-                          href="/aboutus.html"
+                          href="./aboutus.html"
                           >About Us</a
                         >
                       </li>
@@ -116,7 +116,7 @@
                             padding-right: 0rem;
                             padding-left: 0rem !important;
                           "
-                          href="/washingmachine.html"
+                          href="./washingmachine.html"
                           >Washing Machine Service</a
                         >
                       </li>
@@ -127,7 +127,7 @@
                             padding-right: 0rem;
                             padding-left: 0rem !important;
                           "
-                          href="/refrigerator.html"
+                          href="./refrigerator.html"
                           >Refrigerator Service</a
                         >
                       </li>
@@ -138,7 +138,7 @@
                             padding-right: 0rem;
                             padding-left: 0rem !important;
                           "
-                          href="/contactus.html"
+                          href="./contactus.html"
                           >Contact Us</a
                         >
                       </li>
