--- a/washingmachine.html
+++ b/washingmachine.html
@@ -52,7 +52,7 @@
               <a
                 title="Refrigerator &amp; Washing machine service and repair in Trivandrum"
                 class="logo"
-                href="./index.html"
+                href="index.html"
                 ><img
                   src="https://hridhukrishnaelectronics.in/assets/images/Washing_machine-repair_in_trivandrum.webp"
                   alt="Hridhukrishna Electronics"
@@ -88,7 +88,7 @@
                             padding-left: 0rem !important;
                           "
                           aria-current="page"
-                          href="./index.html"
+                          href="index.html"
                           >Home</a
                         >
                       </li>
@@ -99,7 +99,7 @@
                             padding-right: 0rem;
                             padding-left: 0rem !important;
                           "
-                          href="./aboutus.html"
+                          href="aboutus.html"
                           >About Us</a
                         >
                       </li>
@@ -111,7 +111,7 @@
                             padding-right: 0rem;
                             padding-left: 0rem !important;
                           "
-                          href="./washingmachine.html"
+                          href="washingmachine.html"
                           >Washing Machine Service</a
                         >
                       </li>
@@ -122,7 +122,7 @@
                             padding-right: 0rem;
                             padding-left: 0rem !important;
                           "
-                          href="./refrigerator.html"
+                          href="refrigerator.html"
                           >Refrigerator Service</a
                         >
                       </li>
@@ -133,7 +133,7 @@
                             padding-right: 0rem;
                             padding-left: 0rem !important;
                           "
-                          href="./contactus.html"
+                          href="contactus.html"
                           >Contact Us</a
                         >
                       </li>
@@ -158,7 +158,7 @@
                 <h2>Washing Machine Service</h2>
                 <ul>
                   <li class="home-pullet">
-                    <a href="./index.html">Home</a>
+                    <a href="index.html">Home</a>
                   </li>
                   <li>Washing Machine Service</li>
                 </ul>
